--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./typescript
     steps:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v2
