--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "small-uid",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Isa Al-Ula <isaalula@proton.me>",
   "description": "Small UIDs are lexicographically sortable short (64bit) unique identifiers designed to be used as an efficient database Primary Key and a readable (11/12 characters) URL safe UID when encoded.",
   "keywords": [
@@ -19,12 +19,12 @@
   "license": "(Apache-2.0 OR MIT)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/al-ula/small_uid-ts.git"
+    "url": "git+https://github.com/al-ula/small_uid.git"
   },
   "bugs": {
-    "url": "https://github.com/al-ula/small_uid-ts/issues"
+    "url": "https://github.com/al-ula/small_uid/issues"
   },
-  "homepage": "https://github.com/al-ula/small_uid-ts",
+  "homepage": "https://github.com/al-ula/small_uid",
   "private": false,
   "devDependencies": {
     "tsup": "^8.3.5",
