--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -72,7 +72,7 @@ jobs:
         run: echo "Version changed!"
 
   publish:
-    needs: test
+    needs: publish-test
     if: startsWith(github.ref, 'refs/tags/')  # Runs on tag pushes
     runs-on: ubuntu-latest
     defaults:
