--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "small_uid"
 authors = ["Isa Al-Ula"]
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 readme = "README.md"
 description = "A 64 bit lexicographically sortable unique identifier implementation"
 keywords = ["small", "ulid", "uuid", "sortable", "identifier"]
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/al-ula/small_uid-rs"
+repository = "https://github.com/al-ula/small_uid"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
