--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "small_uid"
 authors = ["Isa Al-Ula"]
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 readme = "README.md"
 description = "A 64 bit lexicographically sortable unique identifier implementation"
@@ -14,15 +14,15 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 base64-url = "3.0.0"
-rand = "0.9.0-alpha.2"
+rand = "0.9.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-serde = { version = "1.0.210", features = ["derive"] }
+serde = { version = "1.0.218", features = ["derive"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-getrandom = { version = "0.2.0", features = ["js"] }
+getrandom = { version = "0.3.1", features = ["wasm_js"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.rand]
-version = "0.9.0-alpha.2"
+version = "0.9.0"
 default-features = false
-features = ["std", "std_rng", "getrandom"]
+features = ["std", "std_rng", "os_rng"]
