--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "small_uid"
 authors = ["Isa Al-Ula"]
-version = "0.2.4"
-edition = "2021"
+version = "0.2.5-alpha.0"
+edition = "2024"
 readme = "README.md"
 description = "A 64 bit lexicographically sortable unique identifier implementation"
 keywords = ["small", "ulid", "uuid", "sortable", "identifier"]
