--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,7 +17,7 @@ base64-url = "3.0.0"
 rand = "0.9.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-serde = { version = "1.0.218", features = ["derive"] }
+serde = { version = "1.0.218", features = ["derive"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3.1", features = ["wasm_js"] }
@@ -26,3 +26,10 @@ getrandom = { version = "0.3.1", features = ["wasm_js"] }
 version = "0.9.0"
 default-features = false
 features = ["std", "std_rng", "os_rng"]
+
+[features]
+default = ["serde"]
+serde = ["dep:serde"]
+
+[dev-dependencies]
+serde_json = "1.0.140"
