--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "*"
     tags:
-      - "*"
+      - "*-js"
 
 jobs:
   test:
@@ -73,7 +73,7 @@ jobs:
 
   publish:
     needs: publish-test
-    if: startsWith(github.ref, 'refs/tags/') && endsWith(github.ref, '-js') # Runs on tag pushes with a -js suffix
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     defaults:
       run:
