--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -20,6 +20,11 @@ jobs:
 
       - run: cargo binstall -y wasm-pack
       - run: wasm-pack build --release --no-pack --target web --out-dir ../typescript/rng
+      - name: Use rng in artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: rng-wasm
+          path: typescript/rng
   test:
     needs: build-wasm
     runs-on: ubuntu-latest
@@ -31,6 +36,13 @@ jobs:
       - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x # Run with latest stable Deno.
+
+      - name: Download WASM artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rng-wasm
+          path: typescript/rng
+
       # Check if the code is formatted according to Deno's default
       # formatting conventions.
       - run: deno fmt --check
@@ -66,6 +78,11 @@ jobs:
       - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x # Run with latest stable Deno.
+      - name: Download WASM artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rng-wasm
+          path: typescript/rng
       - name: Install dependencies
         run: deno install
       - name: Publish package
@@ -100,6 +117,11 @@ jobs:
       - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x # Run with latest stable Deno.
+      - name: Download WASM artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rng-wasm
+          path: typescript/rng
       - name: Install dependencies
         run: deno install
       - name: Publish package
