--- a/typescript/deno.json
+++ b/typescript/deno.json
@@ -8,8 +8,8 @@
   },
   "license": "MIT and Apache-2.0",
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "@std/expect": "jsr:@std/expect@^1.0.8"
+    "@std/assert": "jsr:@std/assert@^1.0.13",
+    "@std/expect": "jsr:@std/expect@^1.0.16"
   },
   "exclude": [
     ".github",
