--- a/typescript/deno.json
+++ b/typescript/deno.json
@@ -1,18 +1,21 @@
 {
   "name": "@al-ula/small-uid",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "exports": {
     ".": "./mod.ts",
-    "./pure": "./pure.ts"
+    "./pure": "./pure.ts",
+    "./web": "./web.ts"
   },
   "tasks": {
+    "prebuild": "deno run -A scripts/wasm_post_build.ts && deno run -A scripts/generate_web.ts",
     "dev": "deno test --watch mod.ts",
     "build": "deno run -A scripts/build.ts"
   },
   "license": "MIT and Apache-2.0",
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.13",
-    "@std/expect": "jsr:@std/expect@^1.0.16"
+    "@std/expect": "jsr:@std/expect@^1.0.16",
+    "@std/fs": "jsr:@std/fs@^1.0.19"
   },
   "exclude": [
     ".github",
@@ -29,6 +32,6 @@
     "exclude": ["dist", "rng", "mod_test.ts", "mod_bench.ts"]
   },
   "publish": {
-    "exclude": ["!rng/*", "!LICENSE*"]
+    "exclude": ["!rng/*", "!LICENSE*", "!web.ts"]
   }
 }
