--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "small-uid",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "author": "Isa Al-Ula <isaalula@proton.me>",
   "description": "Small UIDs are lexicographically sortable short (64bit) unique identifiers designed to be used as an efficient database Primary Key and a readable (11/12 characters) URL safe UID when encoded.",
   "keywords": [
@@ -10,6 +10,9 @@
     "id",
     "generator",
     "guid"
+  ],
+  "files": [
+    "./dist/rng_bg.wasm"
   ],
   "type": "module",
   "module": "./dist/mod.js",
